# nexusmods-api-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
examples/: example_main.cpp
include/nexusmods/: client.h
src/: client.cpp
